# TS_Forecast_DL_TFT_dailySales

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile  requirements.txt
docker/jupyter/: Dockerfile  requirements.txt
docker/mlflow/: requirements.txt
docker/nginx/sites-enabled/: api.conf
docker/postgres/: init.sql
docker/python-dev/: requirements.txt
main/: __init__.py  app.py  conf.py  data_processor.py  evaluation.py  model.py  predict.py  setup_db.py  train.py
main/config/: config.ini
main/utils/: compute_metrics.py  extract_config.py  mlflow_callbacks.py
notebooks/: 00_analise_exploratoria.ipynb  01_limpeza_dados.ipynb  02_treinamento_modelo.ipynb  03_otimizacao_hiperparametros.ipynb  cross_validation_escolha.ipynb
src/: analise_exploratoria.py  limpeza_dados.py  otimizacao_hiperparametro.py  treinamento_modelo.py
