[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "main"
version = "0.0.1"
description = "Projeto para previsão de séries temporais de vendas diárias utilizando redes neurais LSTM em Deep Learning"
authors = [
  { name = "Carlos Eduardo Correa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow",
    "matplotlib",
    "seaborn",
    "mlflow",
    "pytest"
]

[tool.black]
line-length = 99
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["main"]
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true